integration aala khedmet omar